feat: CV → minimalist timeline — hero gold download button, vertical timeline, one-liner entries

--- a/index.html
+++ b/index.html
@@ -302,316 +302,71 @@
   </div>
 
   <!-- ============================================================
-       CV — "The Resume" · Deep Space
+       CV — "The Timeline" · Minimalist Resume
        ============================================================ -->
   <div id="cv" class="view">
     <div class="container">
       <div class="view-header float-up">
         <h1 class="view-title">Curriculum Vitae</h1>
-        <p class="view-subtitle">Education, experience, and credentials</p>
+        <p class="view-subtitle">A condensed timeline. The full story is in the PDF.</p>
       </div>
 
-      <!-- Education -->
-      <div class="cv-section float-up">
-        <p class="cv-section-label">Education</p>
-
-        <div class="cv-edu-item">
-          <h3 class="cv-edu-school">University of Pennsylvania</h3>
-          <p class="cv-edu-degree">Master of Science in Engineering (MSE) in Electrical Engineering</p>
-          <p class="cv-edu-date">Philadelphia, PA · Expected May 2027</p>
-          <ul class="cv-edu-details">
-            <li>Concentration: Nanotechnology &amp; Semiconductors</li>
-            <li>Additional Focus: Mixed Signal &amp; RFIC Design</li>
-            <li>Relevant Coursework: Analog IC Design, Digital IC Design, Nanoscale Science &amp; Engineering,
-              Semiconductor Memory Devices, Nanofabrication &amp; Nanocharacterization, MEMS &amp; NEMS</li>
-          </ul>
-        </div>
-
-        <div class="cv-edu-item">
-          <h3 class="cv-edu-school">Shiv Nadar University</h3>
-          <p class="cv-edu-degree">Bachelor of Technology in Electronics and Communication Engineering</p>
-          <p class="cv-edu-date">Delhi NCR, India · July 2019 – July 2023</p>
-          <ul class="cv-edu-details">
-            <li>Specialization: Microelectronics</li>
-          </ul>
-        </div>
+      <!-- Hero Download Button -->
+      <div class="cv-download float-up">
+        <a href="AKM_WebResume.pdf" target="_blank" rel="noopener" class="cv-download-btn">
+          Download Full Resume (.pdf)
+          <span class="cv-download-arrow">↓</span>
+        </a>
       </div>
 
-      <!-- Professional Experience -->
-      <div class="cv-section float-up">
-        <p class="cv-section-label">Professional Experience</p>
+      <!-- Timeline -->
+      <div class="cv-timeline float-up">
 
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">University of Pennsylvania (ESE Department)</h3>
-            <span class="cv-exp-date">Jan 2026 – Present</span>
-          </div>
-          <p class="cv-exp-role">ESE Laboratories Staff Member</p>
-          <p class="cv-exp-location">Philadelphia, PA</p>
-          <ul class="cv-exp-bullets">
-            <li>Manage and calibrate high-precision electronic instrumentation (Keithley, Agilent) for ESE research
-              labs.</li>
-            <li>Provide technical support for analog component selection and circuit debugging during active lab
-              sessions.</li>
-            <li>Maintain inventory and procure critical components for wide-bandgap and RF characterization setups.</li>
-          </ul>
+        <div class="tl-entry">
+          <span class="tl-dot"></span>
+          <h3 class="tl-org">University of Pennsylvania</h3>
+          <p class="tl-role">MSE Electrical Engineering · Expected 2027</p>
+          <p class="tl-oneliner">Focusing on Nanotech &amp; Mixed-Signal IC Design.</p>
         </div>
 
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Silicon Laboratories</h3>
-            <span class="cv-exp-date">July 2023 – March 2025</span>
-          </div>
-          <p class="cv-exp-role">Associate Hardware Engineer</p>
-          <p class="cv-exp-location">Hyderabad, India</p>
-          <ul class="cv-exp-bullets">
-            <li>Designed 21 mixed-signal evaluation boards featuring 32-bit &amp; 8-bit Silicon Labs MCUs, focusing on
-              RF layout optimization and minimizing switching noise in high-speed digital blocks.</li>
-            <li>Instructional Hardware at UPenn: Designed two development boards currently utilized as standard
-              coursework platforms for ESE 5160 IoT Edge Scaling at the University of Pennsylvania.</li>
-            <li>Led a team of 6 engineers to test and validate 115 units of production-build FPGA setups, including
-              proFPGA motherboards and custom RF-AFE breakout boards.</li>
-            <li>Instrumental in the first-time-right (FTR) design and validation of a USB-to-UART bridge converter board
-              hosting Silicon Labs flagship IC, ensuring robust Signal Integrity (SI).</li>
-            <li>Collaborated with firmware and validation teams to define board requirements and debugging interfaces,
-              streamlining the post-silicon validation flow.</li>
-            <li>Adhered strictly to IPC standards for PCB design, ensuring manufacturability and reliability across all
-              evaluation hardware.</li>
-          </ul>
+        <div class="tl-entry">
+          <span class="tl-dot"></span>
+          <h3 class="tl-org">University of Pennsylvania (ESE Dept.)</h3>
+          <p class="tl-role">ESE Laboratories Staff Member · 2026 – Present</p>
+          <p class="tl-oneliner">Managing high-precision instrumentation and supporting analog lab sessions.</p>
         </div>
 
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Silicon Laboratories</h3>
-            <span class="cv-exp-date">January 2023 – July 2023</span>
-          </div>
-          <p class="cv-exp-role">Hardware Engineering Intern</p>
-          <p class="cv-exp-location">Hyderabad, India</p>
-          <ul class="cv-exp-bullets">
-            <li>Created schematics for a universal sensor board and aided in preliminary testing of customer-facing
-              evaluation boards using Altium NEXUS.</li>
-            <li>Performed rigorous component library management and layout reviews to ensure zero-defect fabrication
-              hand-offs.</li>
-          </ul>
+        <div class="tl-entry">
+          <span class="tl-dot"></span>
+          <h3 class="tl-org">Silicon Laboratories</h3>
+          <p class="tl-role">Associate Hardware Engineer · 2023 – 2025</p>
+          <p class="tl-oneliner">Designed instructional hardware used at UPenn and 21 mixed-signal EVBs.</p>
         </div>
 
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Cadence Design Systems</h3>
-            <span class="cv-exp-date">May 2022 – September 2022</span>
-          </div>
-          <p class="cv-exp-role">Hardware Engineering Intern</p>
-          <p class="cv-exp-location">Bangalore, India</p>
-          <ul class="cv-exp-bullets">
-            <li>Analyzed DDR SDRAM and SerDes schematics in the Memory Interface Group (MIG) using Cadence SerDes PHY.
-            </li>
-            <li>Performed chip layout, schematic design, device optimization, and ran simulation techniques on Cadence
-              Virtuoso.</li>
-            <li>Focused on 3nm technology nodes, specifically characterizing LVTH (Low Threshold Voltage) MOSFET
-              performance.</li>
-          </ul>
+        <div class="tl-entry">
+          <span class="tl-dot"></span>
+          <h3 class="tl-org">Silicon Laboratories</h3>
+          <p class="tl-role">Hardware Engineering Intern · Jan – Jul 2023</p>
+          <p class="tl-oneliner">Created schematics for a universal sensor board and aided customer-facing EVB testing.
+          </p>
         </div>
+
+        <div class="tl-entry">
+          <span class="tl-dot"></span>
+          <h3 class="tl-org">Cadence Design Systems</h3>
+          <p class="tl-role">Hardware Engineering Intern · 2022</p>
+          <p class="tl-oneliner">Characterized 3nm SerDes PHY schematics in the Memory Interface Group.</p>
+        </div>
+
+        <div class="tl-entry">
+          <span class="tl-dot"></span>
+          <h3 class="tl-org">Shiv Nadar University</h3>
+          <p class="tl-role">B.Tech Electronics &amp; Communication · 2019 – 2023</p>
+          <p class="tl-oneliner">Specialization in Microelectronics; researched SOI-FET &amp; FinFET device modelling.
+          </p>
+        </div>
+
       </div>
-
-      <!-- Technical Skills -->
-      <div class="cv-section float-up">
-        <p class="cv-section-label">Technical Skills</p>
-        <div class="cv-skills-grid">
-          <div class="cv-skill-group">
-            <h4>Simulation &amp; Modelling</h4>
-            <div class="cv-skill-tags">
-              <span class="cv-skill-tag">Synopsys Sentaurus TCAD</span>
-              <span class="cv-skill-tag">Cadence Virtuoso</span>
-              <span class="cv-skill-tag">Spectre</span>
-              <span class="cv-skill-tag">Device Physics</span>
-              <span class="cv-skill-tag">MATLAB</span>
-            </div>
-          </div>
-          <div class="cv-skill-group">
-            <h4>Fabrication</h4>
-            <div class="cv-skill-tags">
-              <span class="cv-skill-tag">Photolithography</span>
-              <span class="cv-skill-tag">Wet/Dry Etching (RIE)</span>
-              <span class="cv-skill-tag">CVD/PVD</span>
-              <span class="cv-skill-tag">Spin Coating</span>
-              <span class="cv-skill-tag">Metrology (SEM, AFM, TEM)</span>
-            </div>
-          </div>
-          <div class="cv-skill-group">
-            <h4>Instruments</h4>
-            <div class="cv-skill-tags">
-              <span class="cv-skill-tag">Keithley SCS-4200</span>
-              <span class="cv-skill-tag">VNA</span>
-              <span class="cv-skill-tag">Signal Analyzers</span>
-              <span class="cv-skill-tag">Oscilloscopes (MDO/DSO)</span>
-              <span class="cv-skill-tag">Probe Stations</span>
-            </div>
-          </div>
-          <div class="cv-skill-group">
-            <h4>Hardware / EDA</h4>
-            <div class="cv-skill-tags">
-              <span class="cv-skill-tag">Altium NEXUS</span>
-              <span class="cv-skill-tag">OrCAD</span>
-              <span class="cv-skill-tag">Cadence SerDes PHY</span>
-              <span class="cv-skill-tag">Xilinx Vivado</span>
-              <span class="cv-skill-tag">LTSpice</span>
-              <span class="cv-skill-tag">ngSpice</span>
-            </div>
-          </div>
-          <div class="cv-skill-group">
-            <h4>Programming</h4>
-            <div class="cv-skill-tags">
-              <span class="cv-skill-tag">Verilog</span>
-              <span class="cv-skill-tag">C</span>
-              <span class="cv-skill-tag">Embedded C</span>
-              <span class="cv-skill-tag">Python (NumPy, Pandas)</span>
-              <span class="cv-skill-tag">MATLAB</span>
-              <span class="cv-skill-tag">LaTeX</span>
-            </div>
-          </div>
-          <div class="cv-skill-group">
-            <h4>Embedded Platforms</h4>
-            <div class="cv-skill-tags">
-              <span class="cv-skill-tag">Silicon Labs MCUs</span>
-              <span class="cv-skill-tag">STM32</span>
-              <span class="cv-skill-tag">FPGA</span>
-              <span class="cv-skill-tag">Raspberry Pi</span>
-              <span class="cv-skill-tag">Arduino</span>
-              <span class="cv-skill-tag">BeagleBone Black</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Technical Projects (listed in CV) -->
-      <div class="cv-section float-up">
-        <p class="cv-section-label">Technical Projects</p>
-
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Modelling &amp; Characterization of AlScN Ferroelectric Devices</h3>
-            <span class="cv-exp-date">Aug 2025 – Present</span>
-          </div>
-          <p class="cv-exp-role">Synopsys TCAD</p>
-          <ul class="cv-exp-bullets">
-            <li>Modelling AlScN-based FE-FETs in Synopsys Sentaurus TCAD, replacing standard gate oxides with
-              ferroelectric stacks to match real-life wafer configurations.</li>
-            <li>Analyzing Energy Band diagrams (Ec and Ev) and polarization dynamics to tune ON-OFF voltages and scale
-              channel lengths for cleanroom fabrication feasibility.</li>
-            <li>Characterizing cylindrical AlScN ferroelectric memory arrays using Keithley SCS-4200 Parameter Analyzer.
-            </li>
-            <li>Extracting PUND pulse measurements and DC-IV curves across varying device dimensions to evaluate
-              switching reliability and scalability.</li>
-          </ul>
-        </div>
-
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Nanofabrication of MEMS &amp; Quantum Devices</h3>
-            <span class="cv-exp-date">Spring 2026</span>
-          </div>
-          <p class="cv-exp-role">Singh Center for Nanotechnology</p>
-          <ul class="cv-exp-bullets">
-            <li>Fabricated MEMS Cantilever Beams and Comb Drive Arrays using photolithography, DRIE, and wet etching.
-            </li>
-            <li>Performing device characterization utilizing SEM, AFM, TEM, and Profilometry to analyze etch profiles.
-            </li>
-            <li>Developing process flows for the fabrication of Graphene Field-Effect Transistors (GFETs) and synthesis
-              of CdSe Quantum Dots.</li>
-          </ul>
-        </div>
-
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Wideband Transimpedance Amplifier (TIA) for Optical Receivers</h3>
-            <span class="cv-exp-date">Fall 2025</span>
-          </div>
-          <p class="cv-exp-role">Cadence Virtuoso, 45nm</p>
-          <ul class="cv-exp-bullets">
-            <li>Designed an 8-stage cascaded TIA achieving 519 kΩ (114 dBΩ) gain, exceeding spec by 3.5×.</li>
-            <li>Maintained 311 MHz bandwidth while driving a heavy 600Ω differential load.</li>
-            <li>Implemented a "Direct Coupling" strategy with tapered loading to eliminate area-intensive AC coupling.
-            </li>
-            <li>Reduced power consumption to 3.5 mW (well below 10 mW budget) through architecture optimization.</li>
-          </ul>
-        </div>
-
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Low-Power 16×4 SRAM Array Design</h3>
-            <span class="cv-exp-date">Fall 2025</span>
-          </div>
-          <p class="cv-exp-role">Cadence Virtuoso, 45nm CMOS</p>
-          <ul class="cv-exp-bullets">
-            <li>Designed a synchronous SRAM macro achieving 249 ps (~4 GHz) worst-case write access time.</li>
-            <li>Engineered a robust 6T bitcell with a Cell Ratio of 1.5, eliminating read-disturb failures.</li>
-            <li>Optimized peripheral drive strength to improve Area-Power-Delay Figure of Merit (FOM) by 46%.</li>
-            <li>Delivered a compact layout (2.42 µm²) consuming only 356 µW active power at 1.2V.</li>
-          </ul>
-        </div>
-
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Device Modelling &amp; Simulation</h3>
-            <span class="cv-exp-date">Aug 2021 – Aug 2022</span>
-          </div>
-          <p class="cv-exp-role">Synopsys Sentaurus TCAD</p>
-          <ul class="cv-exp-bullets">
-            <li>Modelled planar 2D SOI-FET and 3D 14nm FinFET, achieving 3% performance improvement over baseline.</li>
-            <li>Simulated tunneling effects and applied advanced mobility models to validate device physics.</li>
-            <li>Recognition: Awarded "Research Grade: Excellent" at the Opportunities for Undergraduate Research (OUR)
-              Conference.</li>
-          </ul>
-        </div>
-
-        <div class="cv-exp-item">
-          <div class="cv-exp-header">
-            <h3 class="cv-exp-company">Universal Sensor Board Design</h3>
-            <span class="cv-exp-date">Spring 2023</span>
-          </div>
-          <p class="cv-exp-role">Altium NEXUS</p>
-          <ul class="cv-exp-bullets">
-            <li>Designed a modular 3-PCB system hosting an MCU, power management, and peripherals.</li>
-            <li>Created schematics for 4 memory elements, 7 sensors, and 5 GPIO headers, optimizing layout for signal
-              integrity.</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Leadership & Certifications -->
-      <div class="cv-section float-up">
-        <p class="cv-section-label">Leadership &amp; Certifications</p>
-
-        <div class="cv-leadership-item">
-          <div>
-            <h4 class="cv-leadership-title">Vice-Chairperson, IEEE Student Body</h4>
-          </div>
-          <span class="cv-leadership-date">Jan 2022 – Apr 2023</span>
-        </div>
-
-        <div class="cv-leadership-item">
-          <div>
-            <h4 class="cv-leadership-title">Secretary, Entrepreneurship Cell, SNU</h4>
-          </div>
-          <span class="cv-leadership-date">Sep 2019 – Mar 2022</span>
-        </div>
-
-        <div class="cv-leadership-item">
-          <div>
-            <h4 class="cv-leadership-title">Certifications</h4>
-            <p class="cv-leadership-org">Introduction to Embedded System Design (NPTEL) · Advances in Freeform
-              Electronics (Yonsei University)</p>
-          </div>
-        </div>
-
-        <div class="cv-leadership-item">
-          <div>
-            <h4 class="cv-leadership-title">Scholarship Recipient, Oxford Royal Academy Summer School</h4>
-          </div>
-          <span class="cv-leadership-date">Jan 2021</span>
-        </div>
-      </div>
-
     </div>
   </div>
 
