feat: CV nested timeline — grouped org nodes, branch tree, equipotential bg, gold active node

--- a/index.html
+++ b/index.html
@@ -322,48 +322,66 @@
       <!-- Timeline -->
       <div class="cv-timeline float-up">
 
-        <div class="tl-entry">
+        <!-- The Current Era -->
+        <div class="tl-entry tl-active">
           <span class="tl-dot"></span>
           <h3 class="tl-org">University of Pennsylvania</h3>
-          <p class="tl-role">MSE Electrical Engineering · Expected 2027</p>
-          <p class="tl-oneliner">Focusing on Nanotech &amp; Mixed-Signal IC Design.</p>
+          <p class="tl-dates">2025 – Present</p>
+          <div class="tl-branches">
+            <div class="tl-sub">
+              <p class="tl-sub-role">MSE Electrical Engineering · Expected 2027</p>
+              <p class="tl-oneliner">Focusing on Nanotech &amp; Mixed-Signal IC Design.</p>
+            </div>
+            <div class="tl-sub">
+              <p class="tl-sub-role">ESE Laboratories Staff Member · 2026 – Present</p>
+              <p class="tl-oneliner">Managing high-precision instrumentation and supporting analog lab sessions.</p>
+            </div>
+          </div>
         </div>
 
-        <div class="tl-entry">
-          <span class="tl-dot"></span>
-          <h3 class="tl-org">University of Pennsylvania (ESE Dept.)</h3>
-          <p class="tl-role">ESE Laboratories Staff Member · 2026 – Present</p>
-          <p class="tl-oneliner">Managing high-precision instrumentation and supporting analog lab sessions.</p>
-        </div>
-
-        <div class="tl-entry">
-          <span class="tl-dot"></span>
-          <h3 class="tl-org">Silicon Laboratories</h3>
-          <p class="tl-role">Associate Hardware Engineer · 2023 – 2025</p>
-          <p class="tl-oneliner">Designed instructional hardware used at UPenn and 21 mixed-signal EVBs.</p>
-        </div>
-
+        <!-- The Industry Era -->
         <div class="tl-entry">
           <span class="tl-dot"></span>
           <h3 class="tl-org">Silicon Laboratories</h3>
-          <p class="tl-role">Hardware Engineering Intern · Jan – Jul 2023</p>
-          <p class="tl-oneliner">Created schematics for a universal sensor board and aided customer-facing EVB testing.
-          </p>
+          <p class="tl-dates">2023 – 2025</p>
+          <div class="tl-branches">
+            <div class="tl-sub">
+              <p class="tl-sub-role">Associate Hardware Engineer · 2023 – 2025</p>
+              <p class="tl-oneliner">Designed instructional hardware used at UPenn and 21 mixed-signal EVBs.</p>
+            </div>
+            <div class="tl-sub">
+              <p class="tl-sub-role">Hardware Engineering Intern · Jan – Jul 2023</p>
+              <p class="tl-oneliner">Created schematics for a universal sensor board and aided customer-facing EVB
+                testing.</p>
+            </div>
+          </div>
         </div>
 
+        <!-- The Internship -->
         <div class="tl-entry">
           <span class="tl-dot"></span>
           <h3 class="tl-org">Cadence Design Systems</h3>
-          <p class="tl-role">Hardware Engineering Intern · 2022</p>
-          <p class="tl-oneliner">Characterized 3nm SerDes PHY schematics in the Memory Interface Group.</p>
+          <p class="tl-dates">2022</p>
+          <div class="tl-branches">
+            <div class="tl-sub">
+              <p class="tl-sub-role">Hardware Engineering Intern · 2022</p>
+              <p class="tl-oneliner">Characterized 3nm SerDes PHY schematics in the Memory Interface Group.</p>
+            </div>
+          </div>
         </div>
 
+        <!-- The Foundation -->
         <div class="tl-entry">
           <span class="tl-dot"></span>
           <h3 class="tl-org">Shiv Nadar University</h3>
-          <p class="tl-role">B.Tech Electronics &amp; Communication · 2019 – 2023</p>
-          <p class="tl-oneliner">Specialization in Microelectronics; researched SOI-FET &amp; FinFET device modelling.
-          </p>
+          <p class="tl-dates">2019 – 2023</p>
+          <div class="tl-branches">
+            <div class="tl-sub">
+              <p class="tl-sub-role">B.Tech Electronics &amp; Communication · 2019 – 2023</p>
+              <p class="tl-oneliner">Specialization in Microelectronics; researched SOI-FET &amp; FinFET device
+                modelling.</p>
+            </div>
+          </div>
         </div>
 
       </div>
